# pm-guage

./: Cargo.toml  bindings.h  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  flash.sh  start_zed.sh
.zed/: debug.json
components/lvgl_configs/: idf_component.yml  lvgl_port.h
components/ui/: CMakeLists.txt  idf_component.yml
components/ui/ui/: PM-GAUGE.eez-project  PM-GAUGE.eez-project-ui-state  PM-GUAGE.eez-project  PM-GUAGE.eez-project-ui-state  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  vars.h
components/ui/ui/fonts/: ui_font_robo_med_24.c  ui_font_robo_med_34.c  ui_font_robo_med_44.c  ui_font_robo_reg_14.c
components/ui/ui/images/: ui_image_fuel.c  ui_image_mpg.c
docs/: README.md
scripts/: flash.sh
src/: command.rs  elm327.rs  error.rs  espnow.rs  http.rs  main.rs  ui.rs
