[package]
name = "pm-gauge"
version = "0.1.0"
authors = ["ferdy"]
edition = "2024"
resolver = "2"
rust-version = "1.88"

[[bin]]
name = "pm-gauge"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

# experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

embedded-svc = {version = "0.28.1", default-features = false }
# gt911 = "0.3"
anyhow = "1.0.100"
thiserror = "2.0.17"
heapless = "0.9.2"
circular-buffer = "1.2.0"

[build-dependencies]
embuild = "0.33"


[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "lvgl/lvgl", version = "8.4.0"}
bindings_header = "bindings.h"
bindings_module = "lcd_bindings"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_lcd_touch_gt911", version = "^1"}
bindings_header = "bindings.h"
bindings_module = "lcd_bindings"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components/lvgl_configs"]
bindings_header = "bindings.h"
bindings_module = "lcd_bindings"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components/ui"]
bindings_header = "bindings.h"
bindings_module = "lcd_bindings"
